--- a/index.html
+++ b/index.html
@@ -163,31 +163,31 @@
                                 <div class="row form-group">
                                     <div class="col-6">
                                         <label for="player_name">Name*</label>
-                                        <input id="player_name" class="form-control" type="text" placeholder="John"
+                                        <input id="player_name" class="form-control scroll-fix" type="text" placeholder="John"
                                             required>
                                     </div>
                                 </div>
                                 <div class="row justify-content-center form-group">
                                     <div class="col-6">
                                         <label for="round_one_rule">Rule for round 1</label>
-                                        <input id="round_one_rule" class="form-control" type="text"
+                                        <input id="round_one_rule" class="form-control scroll-fix" type="text"
                                             placeholder="Take a zip">
                                     </div>
                                     <div class="col-6">
                                         <label for="round_two_rule">Rule for round 2</label>
-                                        <input id="round_two_rule" class="form-control" type="text"
+                                        <input id="round_two_rule" class="form-control scroll-fix" type="text"
                                             placeholder="Take 2 zips">
                                     </div>
                                 </div>
                                 <div class="row justify-content-center form-group">
                                     <div class="col-6">
                                         <label for="round_three_rule">Rule for round 3</label>
-                                        <input id="round_three_rule" class="form-control" type="text"
+                                        <input id="round_three_rule" class="form-control scroll-fix" type="text"
                                             placeholder="Take 3 zips">
                                     </div>
                                     <div class="col-6">
                                         <label for="round_four_rule">Rule for round 4</label>
-                                        <input id="round_four_rule" class="form-control" type="text"
+                                        <input id="round_four_rule" class="form-control scroll-fix" type="text"
                                             placeholder="Take a shot">
                                     </div>
                                 </div>
