--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-        content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, target-densityDpi=device-dpi">
+        content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bussen</title>
 
@@ -134,7 +134,7 @@
         </div>
         <!--HERE BEGINS THE INTRO SCREEN-->
         <div class="container-fluid intro-settings fixed-top">
-            <div id="intro_text" class="row justify-content-center text-color">
+            <div class="row justify-content-center text-color">
                 <div class="col-12 col-md-8 col-lg-6">
                     <div class="row">
                         <div class="col-12">
