--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center">
+                <div class="row justify-content-center menu-heigth-spacing">
                     <div class="col-4 controls-position-4 iphone5-position-fix">
                         <button id="settings_button" class="btn btn-primary">Settings</button>
                     </div>
@@ -75,6 +75,8 @@
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLinkColor">
                                 <a class="dropdown-item" href="#" onClick="changeColorDark();">Dark</a>
                                 <a class="dropdown-item" href="#" onClick="changeColorLight();">Light</a>
+                                <a class="dropdown-item" href="#" onClick="changeColorGreen();">Green</a>
+                                <a class="dropdown-item" href="#" onClick="changeColorOrange();">Orange</a>
                             </div>
                         </div>
                     </div>
@@ -134,7 +136,7 @@
         </div>
         <!--HERE BEGINS THE INTRO SCREEN-->
         <div class="container-fluid intro-settings fixed-top">
-            <div class="row justify-content-center text-color">
+            <div class="row justify-content-center">
                 <div class="col-12 col-md-8 col-lg-6">
                     <div class="row">
                         <div class="col-12">
